--- a/views/record_health.hbs
+++ b/views/record_health.hbs
@@ -51,7 +51,7 @@
                 
                 <!-- The third and final column is the circle that the user can select -->
                 <div class="radiocircle">
-                    <input type="radio" class="radiocircle" name="Selector" id="bloodglucose" value="BloodGlucose"></input>
+                    <input type="radio" class="radiocircle" name="Selector" id="bloodglucose" value="measured_glucose"></input>
                 </div>
             </label>
 
@@ -64,7 +64,7 @@
                 <div class="radiotext">Dose of Insulin</div>
 
                 <div class="radiocircle">
-                    <input name="Selector" class="radiocircle" id="insulin" type="radio" value="InsulinDoses"></input>
+                    <input name="Selector" class="radiocircle" id="insulin" type="radio" value="measured_insulin"></input>
                 </div>
             </label>
 
@@ -76,7 +76,7 @@
                 <div class="radiotext">Weight</div>
 
                 <div class="radiocircle">
-                    <input name="Selector" class="radiocircle" id="weight" type="radio" value="Weight"></input>
+                    <input name="Selector" class="radiocircle" id="weight" type="radio" value="measured_weight"></input>
                 </div>
             </label>
 
@@ -88,7 +88,7 @@
                 <div class="radiotext">Exercise</div>
 
                 <div class="radiocircle">
-                    <input name="Selector" class="radiocircle" id="exercise" type="radio" value="Exercise"></input>
+                    <input name="Selector" class="radiocircle" id="exercise" type="radio" value="measured_exercise"></input>
                 </div>
             </label>
         </div>
