working on patient_specifics

--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -11,7 +11,7 @@
             <img class="patient-specifics-pfp" src="../assets/icon_profile.png" alt="Profile picture" width="150"
                 height="150">
 
-            <h2 class="patient-specifics-name">Kendrick Lamar</h2>
+            <h2 class="patient-specifics-name">Firstname Lastname</h2>
 
             <button class="button03 purple2">Adjust Time-Series</button>
             <button class="button03 purple1">Message</button>
@@ -19,14 +19,18 @@
     </div>
 
     <div class="patient-specifics-table">
-        <div class="grid-patient-category bold">Date/Time</div>
-        <div class="grid-patient-category bold">Data Type</div>
-        <div class="grid-patient-category bold">Value</div>
-        <div class="grid-patient-category bold">Comment</div>
-        <div class="grid-patient-data">-</div>
-        <div class="grid-patient-data">-</div>
-        <div class="grid-patient-data">-</div>
-        <div class="grid-patient-data">-</div>
+        <div class="patient-specifics-table-header">Date/Time</div>
+        <div class="patient-specifics-table-header">Data Type</div>
+        <div class="patient-specifics-table-header">Value</div>
+        <div class="patient-specifics-table-header">Comment</div>
+
+        
+        <div class="patient-specifics-table-data">-</div>
+        <div class="patient-specifics-table-data">-</div>
+        <div class="patient-specifics-table-data">-</div>
+        <div class="patient-specifics-table-data">-</div>
+
+
     </div>
 
     <div class="patient-specifics-notes-container">
