--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -861,7 +861,38 @@ textarea::placeholder {
 .patient-specifics-table {
     border:5px solid rebeccapurple;
     display: grid;
+    grid-template-columns: 20% 20% 20% 40%;
+    /* grid-template-rows: repeat(999, auto) repeat(3, 1fr); */
+    
+    grid-auto-rows: 60px;
+
+    /* grid-template-rows: auto auto 1fr 1fr 1fr auto auto; */
+
 }
+
+
+.patient-specifics-table-header {
+    /* border-left: 3px solid #ececee;
+    border-bottom: 3px solid #ececee; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px; 
+    font-weight: 600;
+    border:1px solid red;
+}
+
+.patient-specifics-table-data {
+    /* grid-row-start: 2;
+    grid-row-end: 3;
+    border-left: 3px solid #ececee; */
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    border:1px solid rgb(4, 0, 255);
+}
+
+
 
 .patient-specifics-notes-container {
     border:5px solid peachpuff;
