working on patient_specifics backend. Still a WIP

--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -2,7 +2,7 @@
 
 
 <div id="patient-specifics-topbar">
-    <h2>Clinical Record for USERNAME</h2>
+    <h2 id="username">Clinical Record for USERNAME</h2>
 </div>
 
 <div id="patient-specifics-container">
