--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -159,9 +159,15 @@
 
     <div class="patient-specifics-notes-container">
         <h2>Clinical Notes for {{profileData.username}}</h2>
-        <p>TODO</p>
-        <p>TODO</p>
-        <p>TODO</p>
+
+        <div class="clinician-notes">
+            <div class="clinician-notes-cell">Date Entered</div>
+            <div class="clinician-notes-cell">Note</div>
+            <div class="clinician-notes-cell">11/01/22 3:00 PM</div>
+            <div class="clinician-notes-cell">This is a hardcoded test note. We need to connect this page to the database.</div>
+
+        </div>
+
     </div>
 </div>
 
