--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -109,7 +109,7 @@
         <h3>Enter new note</h3>
         <form action="/">
             <input type="text" id="clinicanNote" name="cNote" placeholder="Start typing here...">
-            <input type="submit" value="Submit Note">
+            <input class="todo" type="submit" value="Submit Note">
         </form>
 
     </div>
