--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -5,6 +5,9 @@
     <h2 id="username">Clinical Record for {{profileData.username}}</h2>
 </div>
 
+{{each profileValues}}
+
+
 <div id="patient-specifics-container">
     <div class="patient-specifics-userbox">
         <div class="patient-specifics-userbox-subgrid">
@@ -126,3 +129,4 @@
         <h2>Monthly Overview</h2>
     </div>
 </div>
+<br>
