--- a/views/leaderboard.hbs
+++ b/views/leaderboard.hbs
@@ -1,13 +1,6 @@
 <!-- Work in progress leaderboard framework HTML - currently hard coded and not linked yet-->
-<head>
-    <link rel="stylesheet" href="leaderboard.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-</head>
-<body>
-<br>
 <h1 class="LB-heading">leaderboard</h1>
-<br>
+
 
 <!-- container to hold everything -->
 <div class="leaderboard-container">
@@ -15,17 +8,17 @@
 <!-- Need to replace pat_username with his username and replace other usernames-->
     <div class="leaderboard-image-flex">
         <div class="place">
-            <img src="2nd.png" class="place-icon">
+            <img src="../assets/2nd.png" class="place-icon">
             <p class="user-labels">pat_username</p>
         </div>
 
         <div class="place">
-            <img src="1st.png" class="1st-icon">
+            <img src="../assets/1st.png" class="1st-icon">
             <p class="user-labels">username_1</p>
         </div>
 
         <div class="place">
-            <img src="3rd.png" class="place-icon">
+            <img src="../assets/3rd.png" class="place-icon">
             <p class="user-labels">username_2</p>
         </div>
     </div>
@@ -36,31 +29,31 @@
         <h2 class="top-title">Top 5</h2>
 
         <div class="top-1">
-            <img src="1-label.png" class="board-icon">
+            <img src="../assets/1-label.png" class="board-icon">
             <p class="board-label">Username_1</p>
             <p class="user-score">95%</p>
         </div>
     
         <div class="top-2">
-            <img src="2-label.png" class="board-icon">
+            <img src="../assets/2-label.png" class="board-icon">
             <p class="board-label">pat_username</p>
             <p class="user-score">83%</p>
         </div>
 
         <div class="top-3">
-            <img src="3-label.png" class="board-icon">
+            <img src="../assets/3-label.png" class="board-icon">
             <p class="board-label">Username_2</p>
             <p class="user-score">80%</p>
         </div>
 
         <div class="top-others">
-            <img src="4-label.png" class="board-icon">
+            <img src="../assets/4-label.png" class="board-icon">
             <p class="board-label-2">Username_3</p>
             <p class="user-score-2">79%</p>
         </div>
 
         <div class="top-others">
-            <img src="5-label.png" class="board-icon">
+            <img src="../assets/5-label.png" class="board-icon">
             <p class="board-label-2">Username_1</p>
             <p class="user-score-2">77%</p>
         </div>
