added leaderboard route

--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -5,7 +5,7 @@
     <h2 id="username">Clinical Record for {{profileData.username}}</h2>
 </div>
 
-{{each profileValues}}
+{{!-- {{each profileValues}} --}}
 
 
 <div id="patient-specifics-container">
