--- a/views/leaderboard.hbs
+++ b/views/leaderboard.hbs
@@ -1,9 +1,10 @@
 <!-- Work in progress leaderboard framework HTML - currently hard coded and not linked yet-->
-<h1 class="LB-heading">leaderboard</h1>
+{{!-- <h1 class="LB-heading">leaderboard</h1> --}}
 
 
 <!-- container to hold everything -->
 <div class="leaderboard-container">
+    <h1 class="LB-heading">Leaderboard</h1>
 <!-- Top graphics section e.g. top 3 people-->
 <!-- Need to replace pat_username with his username and replace other usernames-->
     <div class="leaderboard-image-flex">
