fix broken URL in login page

--- a/views/login_page.hbs
+++ b/views/login_page.hbs
@@ -21,7 +21,7 @@
                     <button class="login_button">LOGIN</button>
 
                     <div class="acc-creation-text">
-                        <div>Don't have an account? <a href="register_page">Create an Account.</a></div>
+                        <div>Don't have an account? <a href="/register">Create an Account.</a></div>
                     </div>
                 </div>
             </form>
