You can now adjust a patients time series in patient_specifics. Updated existing schema to allow for this as well

--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -19,7 +19,7 @@
 
 
 
-            <form method="POST" action="/post_time_series">
+            <form method="POST" action="/post_time_series/{{profileData.username}}">
                 <div class="modal" id="modal">
                     <div class="modal-header">
                         <div class="title">Required Time-Series</div>
