--- a/views/clinician_dashboard.hbs
+++ b/views/clinician_dashboard.hbs
@@ -37,8 +37,8 @@
                     </div>
                 </div>
                 <div class="flexbox-patient-button">
-                    <button class="patient-button purple2">View Full</button>
-                    <button class="patient-button purple1">Message</button>
+                    <a href="/clinician_dashboard/{{this.username}}" class="patient-button purple2">View Full</a>
+                    <a class="patient-button purple1">Message</a>
                 </div>
             </div>
             <div class="grid-patient-category bold">Blood Glucose</div>
