--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -19,7 +19,7 @@
     <div id="patient-dashboard-grid-container-nested">
         <a href="record_health" class="button01">Record Health</a>
         <button class="button01 purple1">View History</button>
-        <button class="button01 purple2">Leaderboard</button>
+        <a href="leaderboard" class="button01 purple2">Leaderboard</a>
         <button class="button01 purple3">Settings</button>
     </div>
 </div>
@@ -39,7 +39,7 @@
 
         <button class="button02">
             <h2>Recent Messages</h2>
-            <p>No messages.</p>
+            <p class="messages">No messages.</p>
         </button>
         <button class="button01 white">Blood glucose levels</button>
     </div>
