--- a/views/register_page.hbs
+++ b/views/register_page.hbs
@@ -1,24 +1,30 @@
 <body class="login_body">
-<div class="background">
-    <div class="flexbox-form-container">
-        <form class="loginform" action="/register" method="post">
+    <div class="background">
+        <div class="flexbox-form-container">
+            <form class="loginform" action="/register" method="post">
                 <h2 class="login_heading">REGISTER</h2>
-            <div class="login_container">
-                <label for="username"><b>Username</b></label>
-                <input id="username" type="text" placeholder="Enter Username" name="username">
+                <div class="login_container">
+                    <label for="username"><b>Username</b></label>
+                    <input id="username" type="text" placeholder="Enter Username" name="username">
 
-                <label for="psw"><b>Password</b></label>
-                <input id="psw" type="password" placeholder="Enter Password" name="password">
-                <label for="psw"><b>Confirm Password</b></label>
-                <input id="psw" type="password" placeholder="ReEnter Password" name="password2">
-                <br>
-                <button class="login_button">REGISTER</button>
+                    <label for="fname"><b>First Name</b></label>
+                    <input id="fname" type="text" placeholder="Enter your first name" name="fname">
 
-                <div class="acc-creation-text">
-                     <div>Already have an account? <a href="login_page">Login.</a></div> 
-                </div> 
+                    <label for="fname"><b>Last Name</b></label>
+                    <input id="fname" type="text" placeholder="Enter your surname" name="lname">
 
-            </div>   
-        </form>
+                    <label for="psw"><b>Password</b></label>
+                    <input id="psw" type="password" placeholder="Enter Password" name="password">
+                    <label for="psw"><b>Confirm Password</b></label>
+                    <input id="psw" type="password" placeholder="Verify Password" name="password2">
+                    <br>
+                    <button class="login_button">REGISTER</button>
+
+                    <div class="acc-creation-text">
+                        <div>Already have an account? <a href="login_page">Login.</a></div>
+                    </div>
+
+                </div>
+            </form>
+        </div>
     </div>
-</div>
