working on record health

--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -17,9 +17,9 @@
     <!-- Column 2 -->
     <!-- Nested grid container that stores buttons-->
     <div id="patient-dashboard-grid-container-nested">
-        <a href="record_health" class="button01">Record Health</a>
+        <a href="/patient/record_health" class="button01">Record Health</a>
         <button class="button01 purple1">View History</button>
-        <button class="button01 purple2">Leaderboard</button>
+        <a href="leaderboard" class="button01">Leaderboard</a>
         <button class="button01 purple3">Settings</button>
     </div>
 </div>
