laying groundwork for history implementation

--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -18,7 +18,7 @@
     <!-- Nested grid container that stores buttons-->
     <div id="patient-dashboard-grid-container-nested">
         <a href="record_health" class="button01">Record Health</a>
-        <button class="button01 purple1">View History</button>
+        <a href="patient_history" class="button01 purple1">View History</a>
         <button class="button01 purple2">Leaderboard</button>
         <button class="button01 purple3">Settings</button>
     </div>
