--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -39,7 +39,7 @@
 
         <button class="button02">
             <h2>Recent Messages</h2>
-            <p>No messages.</p>
+            <p class="center-text">No messages.</p>
         </button>
         <button class="button01 white">Blood glucose levels</button>
     </div>
