--- a/views/thankyou_page.hbs
+++ b/views/thankyou_page.hbs
@@ -2,7 +2,7 @@
     <div class ="thankyou-flexbox">
         <h1 class="heading">Thank you!</h1>
         <br>
-        <p>Your data has been successfully recorded!</p>
+        <p class="center-text">Your data has been successfully recorded!</p>
         <img src="../assets/thankyou_image.png" class= "thankyouimg">
 
             <div class="thankyou-buttons">
