--- a/views/clinician_dashboard.hbs
+++ b/views/clinician_dashboard.hbs
@@ -35,32 +35,33 @@
                         <img src="assets/icon_profile.png" width="80" height="80">
                     </div>
                     <div>
-                        <a href="clinician_dashboard/{{this.username}}"><div class="patient-name">{{this.username}}</div></a>
+                        <a href="clinician_dashboard/{{username}}"><div class="patient-name">{{username}}</div></a>
                         <div class="patient-last-updated">Last Updated:</div>
-                        <div class="patient-last-updated">{{this.dateTime}}</div>
+                        <div class="patient-last-updated">{{date}}</div>
+                        <div class="patient-last-updated">{{time}}</div>
                     </div>
                 </div>
                 <div class="flexbox-patient-button">
-                    <button class="patient-button purple2" onclick="location.href='clinician_dashboard/{{this.username}}'">View Full</button>
+                    <button class="patient-button purple2" onclick="location.href='clinician_dashboard/{{username}}'">View Full</button>
                     <button class="patient-button purple1">Message</button>
                 </div>
             </div>
             <div class="grid-patient-category bold">Blood Glucose</div>
-            {{#thresholdChecker this.measured_glucose}}
-            <div class="grid-patient-data red-highlight">{{this.measured_glucose}}</div>
+            {{#thresholdChecker measured_glucose}}
+            <div class="grid-patient-data red-highlight">{{measured_glucose}}</div>
             {{else}}
-            <div class="grid-patient-data">{{this.measured_glucose}}</div>
+            <div class="grid-patient-data">{{measured_glucose}}</div>
             {{/thresholdChecker}}
             <div class="grid-patient-category bold">Weight</div>
-            <div class="grid-patient-data">{{this.measured_weight}}</div>
+            <div class="grid-patient-data">{{measured_weight}}</div>
             <div class="grid-patient-category bold">No. Insulin Doses</div>
-            <div class="grid-patient-data">{{this.measured_insulin}}</div>
+            <div class="grid-patient-data">{{measured_insulin}}</div>
             <div class="grid-patient-category bold">Exercise (Step Count)</div>
-            <div class="grid-patient-data">{{this.measured_exercise}}</div>
+            <div class="grid-patient-data">{{measured_exercise}}</div>
         </div>
         <div class="grid-patient-action-required">
             <div class="grid-patient-action-required-title bold">Comments</div>
-            <div class="grid-patient-action-required-comment">{{this.comment}}</div>
+            <div class="grid-patient-action-required-comment">{{comment}}</div>
         </div>
     </div>
     {{/each}}
